# PAGSEGURO

pagseguro/: pyproject.toml
pagseguro/pagseguro/: __init__.py  emer.py  forms.py  main.py  trad.py
pagseguro/pagseguro/integracao/: requisition.py  utils.py
pagseguro/pagseguro/static/css/: style.css
pagseguro/pagseguro/static/js/: main.js  pagamento.js
pagseguro/pagseguro/static/scripts/: cliente.py
pagseguro/pagseguro/templates/: link.html  teste.html
